# DivDivSpline

./: .gitignore  CMakeLists.txt
Schemes/: ADM.cpp  ADM.hpp  CMakeLists.txt  function_adj.hpp  solver.hpp  timer.hpp
scripts/: Ref_ADM.ipynb  TestCases-autodiff-deRham.ipynb  TestCases-autodiff.ipynb  consistency.sh  consistency_res  genDeRhamData.ipynb  genDivDivData.ipynb  poincare_res  runADM.sh
src/: deRham.cpp  deRham.hpp  divdiv.cpp  divdiv.hpp  legendregauss.cpp  legendregauss.hpp  mesh.hpp  spaces.hpp  spline.hpp  tensorspline.hpp  vectorspace.hpp
tests/: CMakeLists.txt  cc_consistency.cpp  cc_poincare.cpp  ddcomplex.cpp  ddderivative.cpp  ddinterp.cpp  ddmass.cpp  derivative.cpp  function.hpp  function_adj.hpp  function_adj_deRham.hpp  interp.cpp  mass.cpp
tests/autodiff/common/: classtraits.hpp  eigen.hpp  numbertraits.hpp  vectortraits.hpp
tests/autodiff/forward/: dual.hpp  real.hpp
tests/autodiff/forward/dual/: dual.hpp  eigen.hpp
tests/autodiff/forward/real/: eigen.hpp
tests/autodiff/forward/utils/: derivative.hpp  gradient.hpp  taylorseries.hpp
