#find_package(OpenMP REQUIRED)
#cmake_host_system_information(RESULT NCores
#                              QUERY NUMBER_OF_PHYSICAL_CORES)
#MESSAGE(STATUS "Found ${NCores} cores")
#ADD_EXECUTABLE(adm ADM.cpp)
#TARGET_COMPILE_OPTIONS(adm PUBLIC "-fopenmp")
#TARGET_LINK_LIBRARIES(adm divdiv OpenMP::OpenMP_CXX)
#TARGET_COMPILE_DEFINITIONS(adm PUBLIC OMPTHREADS=${NCores})

INCLUDE(FindPkgConfig)
FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
PKG_CHECK_MODULES(PETSC REQUIRED IMPORTED_TARGET PETSc)

ADD_EXECUTABLE(adm ADM.cpp)
TARGET_LINK_LIBRARIES(adm divdiv MPI::MPI_CXX PkgConfig::PETSC)

