ADD_EXECUTABLE(db_interp interp.cpp)
TARGET_LINK_LIBRARIES(db_interp quadrature)
ADD_EXECUTABLE(db_derivative derivative.cpp)
TARGET_LINK_LIBRARIES(db_derivative quadrature)
ADD_EXECUTABLE(db_mass mass.cpp)
TARGET_LINK_LIBRARIES(db_mass quadrature)
ADD_EXECUTABLE(dd_interp ddinterp.cpp)
TARGET_LINK_LIBRARIES(dd_interp divdiv)
ADD_EXECUTABLE(dd_mass ddmass.cpp)
TARGET_LINK_LIBRARIES(dd_mass divdiv)
ADD_EXECUTABLE(dd_derivative ddderivative.cpp)
TARGET_LINK_LIBRARIES(dd_derivative divdiv)
ADD_EXECUTABLE(dd_complex ddcomplex.cpp)
TARGET_LINK_LIBRARIES(dd_complex divdiv)
